--- a/index.html
+++ b/index.html
@@ -4,28 +4,73 @@
     <meta charset="UTF-8">
     <title>Artifius</title>
     <link rel="stylesheet" href="./normalize.css">
-    <style> body {
-        overflow: hidden;
-    }
+    <style>
+        body {
+            overflow: hidden;
+        }
 
-    .background-wrapper {
-        position: absolute;
-        width: 100%;
-        min-height: 100%;
-        max-height: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
+        .background-wrapper {
+            position: absolute;
+            width: 100%;
+            min-height: 100%;
+            max-height: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
 
-    .background-wrapper > .background-video {
-        overflow: hidden;
-    } </style>
+        .background-wrapper > .background-video {
+            overflow: hidden;
+        }
+
+        .registration-form {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            max-height: 100vh;
+            width: 100%;
+            z-index: 1;
+
+        }
+
+        .form-block {
+            z-index: 2;
+            background: rgba(27, 43, 58, 0.8);
+            border: 1px solid #8dc3ff;
+            color: #8dc3ff;
+            width: 25rem;
+            max-height: 16rem;
+            min-height: 16rem;
+            font-family: sans-serif;
+        }
+        .block-header {
+            font-size: 1.3rem;
+            text-align: right;
+            padding: 0.1rem 0.3rem;
+        }
+        .block-header>a {
+            cursor: pointer;
+            margin-right: 0.1rem;
+        }
+    </style>
 </head>
 <body>
 <div class="background-wrapper">
     <video class="background-video" src="./background.mov" autoplay loop></video>
+</div>
+<div class="registration-form">
+    <div class="form-block">
+        <div class="block-header">
+            <a>&#8722;</a>
+
+        </div>
+        <div class="block-content">
+
+        </div>
+    </div>
 </div>
 </body>
 </html>
