--- a/index.html
+++ b/index.html
@@ -42,28 +42,33 @@
             border: 1px solid #8dc3ff;
             color: #8dc3ff;
             width: 25rem;
-            max-height: 16rem;
-            min-height: 16rem;
+            max-height: 18rem;
+            min-height: 18rem;
             font-family: sans-serif;
         }
+
         .block-header {
             font-size: 1.3rem;
             text-align: right;
             padding: 0.1rem 0.3rem;
         }
-        .block-header>a {
+
+        .block-header > a {
             cursor: pointer;
             margin-right: 0.1rem;
         }
+
         .content-logo {
             text-align: center;
         }
+
         .form-control {
             width: 12rem;
             margin: 0 auto;
         }
-        .form-control>input {
-            width: 100%;
+
+        .form-control > input {
+            width: calc(100% - 0.2rem - 2px);
             border: 1px solid rgba(141, 195, 255, 0.51);
             color: #8dc3ff;
             background: transparent;
@@ -71,11 +76,38 @@
             padding: 0.2rem 0 0.2rem 0.2rem;
             transition: border-top-color 0.2s ease-in-out 0.1s, border-right-color 0.2s ease-in-out 0.1s, border-bottom-color 0.2s ease-in-out 0.1s, border-left-color 0.2s ease-in-out 0.1s;
         }
-        .form-control>input::placeholder {
+
+        .form-control > p {
+            font-size: 0.9rem;
+            margin-bottom: 0.3rem;
+        }
+
+        .form-control > input::placeholder {
             color: rgba(141, 195, 255, 0.51);
         }
-        .form-control>input:focus {
+
+        .form-control > input:focus {
             border: 1px solid #8dc3ff;
+        }
+
+        .form-buttons {
+            width: 12rem;
+            margin: 1rem auto;
+        }
+
+        .form-buttons > button {
+            width: calc(50% - 3px);
+            outline: 0;
+            padding: 0.2rem 0;
+            color: rgba(141, 195, 255, 0.51);
+            border: 1px solid rgba(141, 195, 255, 0.51);
+            background: transparent;
+            transition: border-top-color 0.2s ease-in-out 0.1s, border-right-color 0.2s ease-in-out 0.1s, border-bottom-color 0.2s ease-in-out 0.1s, border-left-color 0.2s ease-in-out 0.1s, color 0.2s ease-in-out 0.1s;
+        }
+
+        .form-buttons > button:hover, .form-buttons > button:focus {
+            border: 1px solid #8dc3ff;
+            color: #8dc3ff;
         }
     </style>
 </head>
@@ -90,15 +122,19 @@
 
         </div>
         <div class="block-content">
-            <h2 class="content-logo">Artifius</h2>
+            <h2 class="content-logo"><span><img src="./logo.svg" alt="" height="35"></span>Artifius</h2>
             <form>
-                <div class="form-control" >
+                <div class="form-control">
                     <p>Enter user name</p>
                     <input type="text" placeholder="Enter user name">
                 </div>
-                <div class="form-control" >
+                <div class="form-control">
                     <p>Enter password</p>
                     <input type="password" placeholder="Enter password">
+                </div>
+                <div class="form-buttons">
+                    <button type="reset">Reset</button>
+                    <button type="submit">Submit</button>
                 </div>
             </form>
         </div>
