--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Artifius</title>
+    <title>Authorization</title>
     <link rel="stylesheet" href="./normalize.css">
     <style>
         body {
@@ -122,7 +122,7 @@
 
         </div>
         <div class="block-content">
-            <h2 class="content-logo"><span><img src="./logo.svg" alt="" height="35"></span>Artifius</h2>
+            <h2 class="content-logo"><span><img src="./logo.svg" alt="" height="35"></span>Authorization</h2>
             <form>
                 <div class="form-control">
                     <p>Enter user name</p>
